--- a/.github/workflows/branch_name.yml
+++ b/.github/workflows/branch_name.yml
@@ -9,6 +9,6 @@ on:
     
 jobs:
   action-in-out-put:
-   uses: bruce1237/github-workflow-center/.github/workflows/branch_name.yml@myTest
+   uses: bruce1237/github-workflow-center/.github/workflows/branch_name.yml@${{ inputs.tags }}
    with:
     branch_name: ${{ inputs.tags }}
