--- a/.github/actions/env_test/action.yml
+++ b/.github/actions/env_test/action.yml
@@ -15,4 +15,4 @@ runs:
     - name: check inputs
       shell: bash
       run: |
-        echo ${{ inputs.my_name }} is ${{ inputs.my_age }}
+        echo ${{ inputs.my_name }} is not ${{ inputs.my_age }}
