--- a/.github/actions/env_test/action.yml
+++ b/.github/actions/env_test/action.yml
@@ -16,4 +16,4 @@ runs:
       shell: bash
       run: |
         echo ${{ inputs.my_name }} is not ${{ inputs.my_age }}
-        echo $my_name lalala $my_age
+        echo my_name: $my_name , my_age: $my_age first_name: $first_name , last_name: $last_name
