--- a/.github/workflows/test_env.yml
+++ b/.github/workflows/test_env.yml
@@ -36,3 +36,10 @@ jobs:
         env:
           my_name: ${{ env.first_name }}
           my_age: ${{ env.last_name }}
+  
+  compositeEnvTest:
+    uses: bruce1237/github-workflow-center/.github/workflows/env_test.yml@main
+    with:
+      my_name: ${{ env.first_name }}
+      my_age: ${{ env.last_name }}
+   
