--- a/.github/workflows/test_env.yml
+++ b/.github/workflows/test_env.yml
@@ -51,5 +51,5 @@ jobs:
       my_name: ${{ vars.MY_WC }}
       my_age: "${{ secrets.MY_SE }}"
     secrets: inherit #will all the callee to access to this repo's secrets
-      abc: ${{ secrets.MY_SE }} #this is how to pass secret to reuse workflow
+      #abc: ${{ secrets.MY_SE }} #this is how to pass secret to reuse workflow
    
